Fixed sizing bug on firefox, altered press package language, added donate button back.

--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,10 @@ a {
 
 }
 
+#menu-donate a {
+	color: black;
+}
+
 /* HEADER ITEMS */
 .header-container {
 	background-color: #2d71bd;
@@ -187,13 +191,12 @@ a {
 	#volunteers-left {
 		position: relative;
 		float: left;
-		margin-right: 20px;
+		margin-right: 28px;
 	}
 	
 	#volunteers-right {
 		position: relative;
 		float: left;
-		margin-left: 20px;
 	}
 }
 
